fixed some areas to appear well on small screens

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,7 +25,8 @@ body{
     font-family: "Dancing Script", cursive;
   }
 
-  h1 p{
+  h1 p,
+  .emblem{
     font-family: "Dancing Script", cursive;
   }
 
